# test_streamlit

./: Dockerfile  README.md  __init__.py  github.txt  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: __init__.py  crypto_data.py  main.py  pages.py  st_theme.py
students/: __init__.py  student_1_Agam.py  student_2_Atyant.py  student_3_Vaibhav.py
themes/: README.md  crypto_theme.toml  dark_theme.toml  light_theme.toml  neon_theme.toml
