[project]
name = "at3-group2-streamlit-application"
version = "0.1.0"
description = ""
authors = [
    {name = "Agam singh Saini",email = "Agamsingh.saini@student.uts.edu.au"}
]
readme = "README.md"
requires-python = "3.11.4"
dependencies = [
    "streamlit (>=1.28.0)",
    "requests (>=2.31.0)",
    "pandas (>=2.0.0)",
    "plotly (>=5.15.0)",
    "yfinance (>=0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
